tests/baselines/reference/computedPropertyNamesWithStaticProperty.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts(3,10): error TS2449: Class 'C' used before its declaration.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts(6,10): error TS2449: Class 'C' used before its declaration.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts(9,6): error TS2449: Class 'C' used before its declaration.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts (3 errors) ====
    class C {
        static staticProp = 10;
        get [C.staticProp]() {
             ~
!!! error TS2449: Class 'C' used before its declaration.
!!! related TS2728 tests/cases/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts:1:7: 'C' is declared here.
            return "hello";
        }
        set [C.staticProp](x: string) {
             ~
!!! error TS2449: Class 'C' used before its declaration.
!!! related TS2728 tests/cases/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts:1:7: 'C' is declared here.
            var y = x;
        }
        [C.staticProp]() { }
         ~
!!! error TS2449: Class 'C' used before its declaration.
!!! related TS2728 tests/cases/conformance/es6/computedProperties/computedPropertyNamesWithStaticProperty.ts:1:7: 'C' is declared here.
    }